--- a/package.json
+++ b/package.json
@@ -14,18 +14,22 @@
 		"@radix-ui/react-slot": "^1.1.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"dotenv": "^16.4.5",
 		"embla-carousel-react": "^8.3.1",
 		"framer-motion": "^10.18.0",
 		"lucide-react": "^0.290.0",
 		"next": "^14.2.16",
 		"next-themes": "^0.3.0",
+		"nodemailer": "^6.9.16",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-toastify": "^10.0.6",
 		"tailwind-merge": "^1.14.0",
 		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@types/node": "^20.8.7",
+		"@types/nodemailer": "^6.4.16",
 		"@types/react": "^18.2.31",
 		"@types/react-dom": "^18.2.14",
 		"autoprefixer": "^10.4.16",
